--- a/index.css
+++ b/index.css
@@ -4,3 +4,11 @@
     box-sizing: border-box;
     font-family: 'Arial', sans-serif;
 }
+
+body{
+    background-color: #f0f0f0;
+    color: #333;
+}
+h1, h2, h3, h4, h5, h6 {
+    color: #2c3e50;
+}
